fix: overflow of source text
causing left/right scroll on page

--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -144,6 +144,7 @@
     .info {
       display: flex;
       flex-direction: column;
+      width: 100%;
 
       .title {
         text-decoration: none;
